--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "^0.0.19",
     "ai": "^3.2.22",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -20,7 +26,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.4",
+    "react-hook-form": "^7.52.1",
     "resend": "^3.3.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
