--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
+    "@uidotdev/usehooks": "^2.4.1",
     "ai": "^3.2.22",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.407.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -30,6 +34,7 @@
     "resend": "^3.3.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
